--- a/week_5_homework/main.css
+++ b/week_5_homework/main.css
@@ -81,6 +81,7 @@ h2 {
 h3 {
     font-family: 'Lobster Two', cursive;
     font-size: 27px;
+    margin: -25px;
 }
 
 p {
